# handbrake

./: .gitattributes  .gitignore  changelog.md  dependencies.nix  handbrake.cabal
src/HandBrake/: Encode.hs  HB.hs  Options.hs  Paths.hs
src/HandBrake/T/: Encode.hs  Tests.hs
t/: handbrake-tests.hs
testdata/: Bowie.scan.err  sources
