-- The name of the package.
name:                handbrake

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.0.0.0

-- A short (one-line) description of the package.
synopsis:            Haskell interface to HandBrakeCLI, and utility scripting

-- A longer description of the package.
-- description:

-- The license under which the package is released.
license:             MIT

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              Martyn J. Pearce

-- An email address to which users can send suggestions, bug reports, and
-- patches.
maintainer:          haskell@sixears.com

-- A copyright notice.
-- copyright:

-- category:

build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a
-- README.
-- extra-source-files:

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10


library
  ghc-options:        -W -Wall -fhelpful-errors
  -- Modules exported by the library.
  exposed-modules:

  -- modules included in this library but not exported.
  other-modules:       HandBrake.HB, HandBrake.Options, HandBrake.Paths

  default-extensions: FlexibleInstances
                    , MultiParamTypeClasses
                    , NoImplicitPrelude
                    , OverloadedStrings
                    , QuasiQuotes
                    , RankNTypes
                    , UnicodeSyntax

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:     base, base-unicode-symbols, data-textual, lens
                   , logging-effect, mtl, optparse-applicative, text

                   , fpath         >= 1.1.5.0
                   , log-plus      >= 0.0.3.0
                   , mockio        >= 0.0.4.0
                   , mockio-log    >= 0.0.6.0
                   , mockio-plus   >= 0.3.0.0
                   , monaderror-io >= 1.1.2.0
                   , monadio-plus  >= 1.4.13.0
                   , more-unicode  >= 0.0.15.0
                   , natural       >= 0.0.1.0
                   , stdmain       >= 1.3.4.0

  -- Directories containing source files.
  hs-source-dirs:      src

  -- Base language which the package is written in.
  default-language:    Haskell2010

-------------------------------------------------------------------------------

executable hb
  ghc-options:        -O2 -W -Wall -fhelpful-errors
  hs-source-dirs:     bin
  main-is:            hb.hs
  build-depends:      base

                    , handbrake
  default-extensions: NoImplicitPrelude
  default-language:   Haskell2010

-------------------------------------------------------------------------------

test-suite test
  -- add  -rtsopts -prof -auto-all  for profiling
  ghc-options:         -W -Wall -fhelpful-errors
  type:                exitcode-stdio-1.0
  main-is:             handbrake-tests.hs
  hs-source-dirs:      t
  build-depends:       base

                     , handbrake
  default-extensions:  NoImplicitPrelude
  default-language:    Haskell2010

--------------------------------------------------------------------------------
